Modified html and js files, servet class now parses the request

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>McGill Prof Ratings yeeeee</h1>
+        <h1>McGill Professor Ratings</h1>
         <form>
             <div class="form-group">
                 <select id="prof-list" class="form-control">
